# ocr-book-reader

./: BEGINNERS-GUIDE.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/ocrbookreader/app/: MainActivity.kt
android/app/src/main/res/values/: styles.xml
lib/: main.dart
lib/messages/: messages.dart
lib/screens/: home_screen.dart  reader_screen.dart  settings_screen.dart
lib/services/: ocr_service.dart
lib/widgets/: book_list_tile.dart  chapter_passes.dart  ocr_progress_bar.dart  ocr_text_viewer.dart  processing_status_card.dart
rust/: Cargo.toml
rust/src/: lib.rs  messages.rs  ocr_engine.rs  pdf_processor.rs  text_cleaner.rs
