[package]
name = "ocr_book_reader"
version = "0.1.0"
edition = "2021"

[features]
# Full feature — enables OCR engine, PDF processor, and rinf messaging.
# Requires external C libs: Tesseract (leptess), PDFium (pdf crate)
full = []

[dependencies]
# Regex (used by text_cleaner)
regex = "1"
# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
log = "0.4"
env_logger = "0.11"

# Optional/placeholder deps (used when integrated with rinf)
# rinf = "7"
# leptess = "0.14"
# pdf = "0.9"
# image = "0.25"
# sha2 = "0.10"
# tokio = { version = "1", features = ["full"] }
# walkdir = "2"
